--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.example.aashimagarg.googlemaps.MainActivity">
 
-    <EditText
-        android:id="@+id/etAddress"
+    <fragment
+        android:id="@+id/place_autocomplete"
         android:layout_width="384dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         tools:ignore="LabelFor" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
